--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button id="*" class="operator">*</button>
         <button id="/" class="operator">/</button>
     </div>
-    <button id="=">=</button>
+    <button id="equal">=</button>
     <button id="clear">clear</button>
 </body>
 </html>
